[project]
name = "gubchat"
description = "Gubchat is a twitch chat client built using Kivy"
version = "0.1.4"
authors = [
    { name = "Douglas", email = "hashy.software@gmail.com" }
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",

]
readme = "README.md"
dependencies = [
    "aiohttp >= 3.8.5",
    "websockets >= 11.0.3",
    "kivy >= 2.2.1",
    "kivymd >= 1.1.1",
    "keyring >= 24.2.0",
    "sqlalchemy >= 2.0.19",
    "aiosqlite >= 0.19.0",
    "alembic >= 1.11.2",
    "uvloop >= 0.17.0",
]

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/Hashy-Software/gubchat"

[project.scripts]
gubchat = "gubchat.main:main"

[project.optional-dependencies]
dev = []

