[project]
name = "hasherino"
description = "hasherino is a twitch chat client built using flet"
version = "0.1.1"
authors = [
    { name = "Douglas", email = "hashy.software@gmail.com" }
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",

]
readme = "README.md"
dependencies = [
    "aiohttp >= 3.8.5",
    "websockets >= 11.0.3",
    "keyring >= 24.2.0",
    "uvloop >= 0.17.0",
    "flet >= 0.10.3",
]

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/Hashy-Software/hasherino"

[project.scripts]
hasherino = "hasherino.hasherino:run_hasherino"

[project.optional-dependencies]
dev = [
    "pyinstaller >= 6.0.0",
]

